cmake_minimum_required(VERSION 3.29)
project(Sp_1)

set(CMAKE_CXX_STANDARD 20)

add_executable(Sp_1 main.cpp)

add_executable(hello_world aud1/hello_world.cpp)
add_executable(zadaca1 "Vezbi i zadaci 1 kolokvium/zadaca1.cpp")
add_executable(kolokviumvezba1 "Vezbi i zadaci 1 kolokvium/kolokviumvezba1.cpp")
add_executable(ispitzadaca "Vezbi i zadaci 1 kolokvium/ispitzadaca.cpp")
add_executable(zadacavezba "Vezbi i zadaci 1 kolokvium/zadacavezba.cpp")
add_executable(lab1 "Vezbi i zadaci 1 kolokvium/lab1.cpp")
add_executable(auditoriskivezbi "Vezbi i zadaci 1 kolokvium/auditoriskivezbi.cpp")
add_executable(lab2 "Vezbi i zadaci 1 kolokvium/lab2.cpp")
add_executable(lab3 "Vezbi i zadaci 1 kolokvium/lab3.cpp")
add_executable(lab3p "Vezbi i zadaci 1 kolokvium/lab3p.cpp")
add_executable(vezbi1kolokvium "Vezbi i zadaci 1 kolokvium/vezbi1kolokvium.cpp")
add_executable(lab4 "Vezbi i zadaci 1 kolokvium/lab4.cpp")
add_executable(labvezba "Vezbi i zadaci 1 kolokvium/labvezba.cpp")
add_executable(kolokviumangvezba "Vezbi i zadaci 1 kolokvium/kolokviumangvezba.cpp")
add_executable(klepsidra "Vezbi i zadaci 1 kolokvium/klepsidra.cpp")
add_executable(milkov_trie "Vezbi i zadaci 1 kolokvium/milkov_trie.cpp")
add_executable(milkov_trie1 "Vezbi i zadaci 1 kolokvium/milkov_trie1.cpp")

add_executable(Nizi1 "Vezbi 2 kolokvium/Nizi1.cpp")
add_executable(Matrici1 "Vezbi 2 kolokvium/Matrici1.cpp")
add_executable(Rekurzija1 "Vezbi 2 kolokvium/Rekurzija1.cpp")
add_executable(lab5 "Vezbi 2 kolokvium/lab5.cpp")
add_executable(vezbi2k "Vezbi 2 kolokvium/vezbi2k.cpp")
add_executable(lab6 "Vezbi 2 kolokvium/lab6.cpp")
add_executable(lab7 "Vezbi 2 kolokvium/lab7.cpp")
add_executable(lab8 "Vezbi 2 kolokvium/lab8.cpp")
add_executable(vezbi2k24 "Vezbi 2 kolokvium/vezbi2k24.cpp")
add_executable(2kolokvium "Vezbi 2 kolokvium/2kolokvium.cpp")
add_executable(lab9 "Vezbi 2 kolokvium/lab9.cpp")
add_executable(vezbi "Vezbi 2 kolokvium/vezbi.cpp")
add_executable(kolokviumlani2024 "Vezbi 2 kolokvium/kolokviumlani2024.cpp")
add_executable(milkovcpp "Vezbi 2 kolokvium/milkovcpp.cpp")
